UCF-APR2.4/ftr main/force-app/main/default/objects/Case/fields/Account_BTN_From__c.field-meta.xml
<CustomField>
    <fullName>Account_BTN_From__c</fullName>
    <label>Account BTN From</label>
    <type>Phone</type>
</CustomField>