UCF-APR2.4/ftr main/force-app/main/default/objects/Case/fields/Account_BTN_To__c.field-meta.xml
<CustomField>
    <fullName>Account_BTN_To__c</fullName>
    <label>Account BTN To</label>
    <type>Phone</type>
</CustomField>