UCF-APR2.4/ftr main/force-app/main/default/objects/Case/fields/Account_Executive_Profile__c.field-meta.xml
<CustomField>
    <fullName>Account_Executive_Profile__c</fullName>
    <formula>Account.Owner.Profile.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Executive Profile</label>
    <type>Text</type>
</CustomField>