UCF-APR2.4/ftr main/force-app/main/default/objects/Case/fields/Account_ID_TN__c.field-meta.xml
<CustomField>
    <fullName>Account_ID_TN__c</fullName>
    <label>Account ID/TN</label>
    <length>14</length>
    <type>Text</type>
</CustomField>