UCF-APR2.4/ftr main/force-app/main/default/objects/Case/fields/Account_Owner_Active__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner_Active__c</fullName>
    <formula>Account.Owner.IsActive = TRUE</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Owner Active</label>
    <type>Checkbox</type>
</CustomField>