UCF-APR2.4/ftr main/force-app/main/default/objects/Case/fields/Account_Website__c.field-meta.xml
<CustomField>
    <fullName>Account_Website__c</fullName>
    <label>Account Website</label>
    <type>Url</type>
</CustomField>