UCF-APR2.4/ftr main/force-app/main/default/objects/Case/fields/Additional_BTN_s__c.field-meta.xml
<CustomField>
    <fullName>Additional_BTN_s__c</fullName>
    <label>Additional BTN’s?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>