UCF-APR2.4/ftr main/force-app/main/default/objects/Case/fields/Adjustment_Description__c.field-meta.xml
<CustomField>
    <fullName>Adjustment_Description__c</fullName>
    <label>Adjustment Description</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Over $100.00</fullName>
            </value>
            <value>
                <fullName>ETF Promo Credit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>