UCF-APR2.4/ftr main/force-app/main/default/objects/Case/fields/AE_CSA_Notified__c.field-meta.xml
<CustomField>
    <fullName>AE_CSA_Notified__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created for First Bill Review case COE and CNP on case 
00738230 for Jim Power. Replacing AE Notified on COE FBR case due to Order Management uses that field ina process builder.</description>
    <inlineHelpText>Check if the AE or CSA has been notified.</inlineHelpText>
    <label>AE/CSA Notified</label>
    <type>Checkbox</type>
</CustomField>