UCF-APR2.4/ftr main/force-app/main/default/objects/Case/fields/AE_Notified__c.field-meta.xml
<CustomField>
    <fullName>AE_Notified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AE Notified</label>
    <type>Checkbox</type>
</CustomField>