UCF-APR2.4/ftr main/force-app/main/default/objects/Case/fields/AE_Signature_Return_Date__c.field-meta.xml
<CustomField>
    <fullName>AE_Signature_Return_Date__c</fullName>
    <description>Created for ABS Job Change Order Shonda Cann 5/2021 TMM</description>
    <inlineHelpText>Enter the date returned to the AE for signature</inlineHelpText>
    <label>AE Signature Return Date</label>
    <type>Date</type>
</CustomField>