UCF-APR2.4/ftr main/force-app/main/default/objects/Case/fields/AE_Sold__c.field-meta.xml
<CustomField>
    <fullName>AE_Sold__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AE Sold</label>
    <type>Checkbox</type>
</CustomField>