UCF-APR2.4/ftr main/force-app/main/default/objects/Case/fields/After_Hours_Cut__c.field-meta.xml
<CustomField>
    <fullName>After_Hours_Cut__c</fullName>
    <defaultValue>false</defaultValue>
    <label>After Hours Cut</label>
    <type>Checkbox</type>
</CustomField>