UCF-APR2.4/ftr main/force-app/main/default/objects/Case/fields/AIAC_CIAC_or_Damage__c.field-meta.xml
<CustomField>
    <fullName>AIAC_CIAC_or_Damage__c</fullName>
    <label>AIAC, CIAC or Damage</label>
    <length>30</length>
    <type>Text</type>
</CustomField>