UCF-APR2.4/ftr main/force-app/main/default/objects/Case/fields/All_Dates_All_Time__c.field-meta.xml
<CustomField>
    <fullName>All_Dates_All_Time__c</fullName>
    <defaultValue>false</defaultValue>
    <label>All Dates/All Time</label>
    <type>Checkbox</type>
</CustomField>