UCF-APR2.4/ftr main/force-app/main/default/objects/Case/fields/Amount_Cancellation__c.field-meta.xml
<CustomField>
    <fullName>Amount_Cancellation__c</fullName>
    <label>Amount</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>