UCF-APR2.4/ftr main/force-app/main/default/objects/Case/fields/APP__c.field-meta.xml
<CustomField>
    <fullName>APP__c</fullName>
    <label>APP#</label>
    <length>18</length>
    <type>Text</type>
</CustomField>