UCF-APR2.4/ftr main/force-app/main/default/objects/Case/fields/Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>Approval_Date__c</fullName>
    <description>Created for E-Rate CTF case for Beckie Lou Blumenstein/Todd Bowser</description>
    <label>Approval Date</label>
    <type>Date</type>
</CustomField>