UCF-APR2.4/ftr main/force-app/main/default/objects/Case/fields/Approval_for_Migration_Plus__c.field-meta.xml
<CustomField>
    <fullName>Approval_for_Migration_Plus__c</fullName>
    <description>This field is to approve or reject the Voice migration cases</description>
    <label>Approval for Migration</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>