UCF-APR2.4/ftr main/force-app/main/default/objects/Case/fields/Approved_by__c.field-meta.xml
<CustomField>
    <fullName>Approved_by__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approved by</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases6</relationshipName>
    <type>Lookup</type>
</CustomField>