UCF-APR2.4/ftr main/force-app/main/default/objects/Case/fields/Approver_s_Phone_number__c.field-meta.xml
<CustomField>
    <fullName>Approver_s_Phone_number__c</fullName>
    <label>Approver&apos;s Phone number</label>
    <type>Phone</type>
</CustomField>