UCF-APR2.4/ftr main/force-app/main/default/objects/Case/fields/Are_these_plans_finalized__c.field-meta.xml
<CustomField>
    <fullName>Are_these_plans_finalized__c</fullName>
    <label>Are these plans finalized?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Unsure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>