UCF-APR2.4/ftr main/force-app/main/default/objects/Case/fields/ARRIS_Acceptance_Form_Returned__c.field-meta.xml
<CustomField>
    <fullName>ARRIS_Acceptance_Form_Returned__c</fullName>
    <label>ARRIS Acceptance Form Returned:</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>