UCF-APR2.4/ftr main/force-app/main/default/objects/Case/fields/Audit_Category__c.field-meta.xml
<CustomField>
    <fullName>Audit_Category__c</fullName>
    <label>Audit Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Audit</fullName>
            </value>
            <value>
                <fullName>Dispute</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>