UCF-APR2.4/ftr main/force-app/main/default/objects/Case/fields/Audit_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Audit_Due_Date__c</fullName>
    <formula>CreatedDate + 7</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Audit Due Date</label>
    <type>Date</type>
</CustomField>