UCF-APR2.4/ftr main/force-app/main/default/objects/Case/fields/Audit_Findings__c.field-meta.xml
<CustomField>
    <fullName>Audit_Findings__c</fullName>
    <description>Added to the Sales Audit Case requested by Denise McAuliff on case 00612935 2/18/2020</description>
    <label>Audit Findings</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Audit Reversal</fullName>
            </value>
            <value>
                <fullName>Disconnect within 90 Days</fullName>
            </value>
            <value>
                <fullName>Duplicate Opportunity</fullName>
            </value>
            <value>
                <fullName>Incorrect Sale Month</fullName>
            </value>
            <value>
                <fullName>Incorrect Term</fullName>
            </value>
            <value>
                <fullName>Invalid Order Number</fullName>
            </value>
            <value>
                <fullName>Itemize Products</fullName>
            </value>
            <value>
                <fullName>No Backup/Supporting Documentation</fullName>
            </value>
            <value>
                <fullName>Order Cancelled</fullName>
            </value>
            <value>
                <fullName>Order Not Submitted</fullName>
            </value>
            <value>
                <fullName>Order Rejected</fullName>
            </value>
            <value>
                <fullName>ROE Infraction</fullName>
            </value>
            <value>
                <fullName>Sale Value Discrepancy</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
                <isActive>false</isActive>
                <label>Other</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>