UCF-APR2.4/ftr main/force-app/main/default/objects/Case/fields/Audit_Findings_Detail_Picklist__c.field-meta.xml
<CustomField>
    <fullName>Audit_Findings_Detail_Picklist__c</fullName>
    <label>Audit Findings Detail</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Audit_Findings__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Canceled by Sales</fullName>
            </value>
            <value>
                <fullName>Canceled by Customer</fullName>
            </value>
            <value>
                <fullName>Service is not available</fullName>
            </value>
            <value>
                <fullName>Incorrect Order Type</fullName>
            </value>
            <value>
                <fullName>Missing Documentation</fullName>
            </value>
            <value>
                <fullName>Service/Speed not available</fullName>
            </value>
            <value>
                <fullName>Schedule not signed</fullName>
            </value>
            <value>
                <fullName>MRR Overstated</fullName>
            </value>
            <value>
                <fullName>MRR Understated</fullName>
            </value>
            <value>
                <fullName>Existing MRR booked as New</fullName>
            </value>
            <value>
                <fullName>Gross Margin Incorrect</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>