UCF-APR2.4/ftr main/force-app/main/default/objects/Case/fields/Audit_Findings_Details__c.field-meta.xml
<CustomField>
    <fullName>Audit_Findings_Details__c</fullName>
    <description>Added by Denise McAuliff on 2/28/2020 for the Audit Case</description>
    <inlineHelpText>This field is required if Audit Findings = Order Rejected or Other</inlineHelpText>
    <label>Audit Findings Details</label>
    <type>TextArea</type>
</CustomField>