UCF-APR2.4/ftr main/force-app/main/default/objects/Case/fields/Audit_Follow_Up_Date__c.field-meta.xml
<CustomField>
    <fullName>Audit_Follow_Up_Date__c</fullName>
    <formula>CreatedDate + 8</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Audit Follow Up Date</label>
    <type>Date</type>
</CustomField>