UCF-APR2.4/ftr main/force-app/main/default/objects/Case/fields/Audit_Internal_Comments__c.field-meta.xml
<CustomField>
    <fullName>Audit_Internal_Comments__c</fullName>
    <description>Created for the Audit case only not the Audit - AE page layout.  This was requested on case 00655557 by Denise McAullif.  Only 2 profiles have access to this field.  Frontier Auditors and system admins</description>
    <inlineHelpText>Comments are internal only to the Audit team and Salesforce Admins.</inlineHelpText>
    <label>Audit Internal Comments</label>
    <type>TextArea</type>
</CustomField>