UCF-APR2.4/ftr main/force-app/main/default/objects/Case/fields/Audit_Task_Created__c.field-meta.xml
<CustomField>
    <fullName>Audit_Task_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Audit Task Created</label>
    <type>Checkbox</type>
</CustomField>