UCF-APR2.4/ftr main/force-app/main/default/objects/Case/fields/Available_for_References__c.field-meta.xml
<CustomField>
    <fullName>Available_for_References__c</fullName>
    <description>Created for Sarah Jarvis case 00897264 2/22</description>
    <label>Available for References?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>