UCF-APR2.4/ftr main/force-app/main/default/objects/Case/fields/B0ALL_Order__c.field-meta.xml
<CustomField>
    <fullName>B0ALL_Order__c</fullName>
    <label>B0ALL Order #</label>
    <length>18</length>
    <type>Text</type>
</CustomField>