UCF-APR2.4/ftr main/force-app/main/default/objects/Case/fields/BCN__c.field-meta.xml
<CustomField>
    <fullName>BCN__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BCN</label>
    <type>Checkbox</type>
</CustomField>