UCF-APR2.4/ftr main/force-app/main/default/objects/Case/fields/BDT__c.field-meta.xml
<CustomField>
    <fullName>BDT__c</fullName>
    <description>Added for the RFP case per Alicia Robinson Case --685755</description>
    <label>BDT</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>