UCF-APR2.4/ftr main/force-app/main/default/objects/Case/fields/BDT_is_Required_1__c.field-meta.xml
<CustomField>
    <fullName>BDT_is_Required_1__c</fullName>
    <formula>Opportunity__r.BDT_is_Required__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field auto-populates from the Opportunity record and applies only to E-Rate</inlineHelpText>
    <label>BDT is Required (E-Rate)</label>
    <type>Checkbox</type>
</CustomField>