UCF-APR2.4/ftr main/force-app/main/default/objects/Case/fields/BDT_is_Required_Non_E_Rate_del__c.field-meta.xml
<CustomField>
    <fullName>BDT_is_Required_Non_E_Rate_del__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This is when RFP coordinator has been made aware that this RFP requires a BDT. This field visible only to RFP Team</inlineHelpText>
    <label>BDT is Required (Non E-Rate)</label>
    <type>Checkbox</type>
</CustomField>