UCF-APR2.4/ftr main/force-app/main/default/objects/Case/fields/BDT_Number_1__c.field-meta.xml
<CustomField>
    <fullName>BDT_Number_1__c</fullName>
    <formula>Opportunity__r.BDT_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field auto-populates from the Opportunity record.</inlineHelpText>
    <label>BDT Number</label>
    <type>Text</type>
</CustomField>