UCF-APR2.4/ftr main/force-app/main/default/objects/Case/fields/BDT_number__c.field-meta.xml
<CustomField>
    <fullName>BDT_number__c</fullName>
    <description>Added for RFP case per Alicia Robinson case 00685755</description>
    <label>BDT Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>