UCF-APR2.4/ftr main/force-app/main/default/objects/Case/fields/Bill_Date__c.field-meta.xml
<CustomField>
    <fullName>Bill_Date__c</fullName>
    <description>Used on Jaryl Northrop&apos;s First Bill Review Case</description>
    <inlineHelpText>Populate the Bill Date</inlineHelpText>
    <label>Bill Date</label>
    <type>Date</type>
</CustomField>