UCF-APR2.4/ftr main/force-app/main/default/objects/Case/fields/Bill_Incorrect_Reason__c.field-meta.xml
<CustomField>
    <fullName>Bill_Incorrect_Reason__c</fullName>
    <description>Used on Jaryl Northrop&apos;s First Bill Review Case</description>
    <inlineHelpText>If Bill Correct = No, this field is required.</inlineHelpText>
    <label>Bill Incorrect Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ETF Billed in Error</fullName>
            </value>
            <value>
                <fullName>LD/BOT Billing Incorrectly</fullName>
            </value>
            <value>
                <fullName>MRC Billing Incorrectly</fullName>
            </value>
            <value>
                <fullName>NRCs Charged in Error</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Promo Missing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>