UCF-APR2.4/ftr main/force-app/main/default/objects/Case/fields/Billing_AccountExecutive__c.field-meta.xml
<CustomField>
    <fullName>Billing_AccountExecutive__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Executive</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 AND (2 OR 3 OR 4 OR 5)</booleanFilter>
        <filterItems>
            <field>User.IsActive</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>equals</operation>
            <value>#BAM - Business Account Manager</value>
        </filterItems>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>equals</operation>
            <value>#CTF AccountExec</value>
        </filterItems>
        <filterItems>
            <field>User.profileName__c</field>
            <operation>equals</operation>
            <value>Frontier Sales User</value>
        </filterItems>
        <filterItems>
            <field>User.profileName__c</field>
            <operation>equals</operation>
            <value>#CTF RegionalSalesMgr</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases_AE_Billing</relationshipName>
    <type>Lookup</type>
</CustomField>