UCF-APR2.4/ftr main/force-app/main/default/objects/Case/fields/Billing_AELocation__c.field-meta.xml
<CustomField>
    <fullName>Billing_AELocation__c</fullName>
    <formula>TEXT(Billing_AccountExecutive__r.StateCode)</formula>
    <label>AE Location</label>
    <type>Text</type>
</CustomField>