UCF-APR2.4/ftr main/force-app/main/default/objects/Case/fields/Billing_CAPNumber__c.field-meta.xml
<CustomField>
    <fullName>Billing_CAPNumber__c</fullName>
    <label>CAP #</label>
    <length>20</length>
    <type>Text</type>
</CustomField>