UCF-APR2.4/ftr main/force-app/main/default/objects/Case/fields/Billing_Case_Summary__c.field-meta.xml
<CustomField>
    <fullName>Billing_Case_Summary__c</fullName>
    <description>Created for Sarah Jarvis\Dan McCafferty for Connect Call case page layout (Case 00793739, 2021_08)</description>
    <inlineHelpText>Summarize any Billing cases for discussion. If none, enter None.</inlineHelpText>
    <label>Billing Case Summary</label>
    <length>7500</length>
    <type>Html</type>
</CustomField>