UCF-APR2.4/ftr main/force-app/main/default/objects/Case/fields/Billing_Correct__c.field-meta.xml
<CustomField>
    <fullName>Billing_Correct__c</fullName>
    <description>This is used on the Jaryl Northrop&apos;s First Bill Review Case.</description>
    <inlineHelpText>Select Yes if the first bill was correct and No if it was incorrect.</inlineHelpText>
    <label>Billing Correct</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>