UCF-APR2.4/ftr main/force-app/main/default/objects/Case/fields/Billing_CSA__c.field-meta.xml
<CustomField>
    <fullName>Billing_CSA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CSA</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.IsActive</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases_Billing</relationshipName>
    <type>Lookup</type>
</CustomField>