UCF-APR2.4/ftr main/force-app/main/default/objects/Case/fields/Billing_Details_Special_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Billing_Details_Special_Instructions__c</fullName>
    <label>Billing Details &amp; Special Instructions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>