UCF-APR2.4/ftr main/force-app/main/default/objects/Case/fields/Billing_Issue__c.field-meta.xml
<CustomField>
    <fullName>Billing_Issue__c</fullName>
    <label>Billing Issue</label>
    <length>255</length>
    <type>Text</type>
</CustomField>