UCF-APR2.4/ftr main/force-app/main/default/objects/Case/fields/Billing_Issue_Cause__c.field-meta.xml
<CustomField>
    <fullName>Billing_Issue_Cause__c</fullName>
    <label>Billing Issue Cause/Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Adjustment Requested</fullName>
            </value>
            <value>
                <fullName>Audit</fullName>
            </value>
            <value>
                <fullName>Billing Discrepancy</fullName>
            </value>
            <value>
                <fullName>CABs Research</fullName>
            </value>
            <value>
                <fullName>Category 5</fullName>
            </value>
            <value>
                <fullName>Complex Billing</fullName>
            </value>
            <value>
                <fullName>DPI Posting</fullName>
            </value>
            <value>
                <fullName>EDI</fullName>
            </value>
            <value>
                <fullName>Equipment (UEC)</fullName>
            </value>
            <value>
                <fullName>ETF</fullName>
            </value>
            <value>
                <fullName>First Bill Review</fullName>
            </value>
            <value>
                <fullName>GLOBYS</fullName>
            </value>
            <value>
                <fullName>Investigation</fullName>
            </value>
            <value>
                <fullName>Invoices</fullName>
            </value>
            <value>
                <fullName>Manual invoice</fullName>
            </value>
            <value>
                <fullName>Misapplied Payment/Payment Transfer</fullName>
            </value>
            <value>
                <fullName>Misquoted</fullName>
            </value>
            <value>
                <fullName>Missed Commitment</fullName>
            </value>
            <value>
                <fullName>Next Bill Review</fullName>
            </value>
            <value>
                <fullName>No CAP credit</fullName>
            </value>
            <value>
                <fullName>NRC</fullName>
            </value>
            <value>
                <fullName>Order Error</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Payment Investigation</fullName>
            </value>
            <value>
                <fullName>Pending CAP Approval</fullName>
            </value>
            <value>
                <fullName>Pending System Issue Resolution</fullName>
            </value>
            <value>
                <fullName>Refund</fullName>
            </value>
            <value>
                <fullName>Service Affecting Outage</fullName>
            </value>
            <value>
                <fullName>Tax</fullName>
            </value>
            <value>
                <fullName>TEM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>