UCF-APR2.4/ftr main/force-app/main/default/objects/Case/fields/Billing_Support_Needed__c.field-meta.xml
<CustomField>
    <fullName>Billing_Support_Needed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used on the Support Team case to trigger case assignment rules to Billing</description>
    <inlineHelpText>Check if this is regarding a billing issue</inlineHelpText>
    <label>Billing Support Needed</label>
    <type>Checkbox</type>
</CustomField>