UCF-APR2.4/ftr main/force-app/main/default/objects/Case/fields/Billing_Type__c.field-meta.xml
<CustomField>
    <fullName>Billing_Type__c</fullName>
    <label>Billing Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BDT (Carrier) - Business Decision Tool</fullName>
            </value>
            <value>
                <fullName>BDT (Retail) - Business Decision Tool</fullName>
            </value>
            <value>
                <fullName>CAN – Cancel Install</fullName>
                <label>CAN - Cancel Install</label>
            </value>
            <value>
                <fullName>CAN – Cancel Upgrade/Move</fullName>
                <label>CAN - Cancel Upgrade/Move</label>
            </value>
            <value>
                <fullName>CIAC (Adv Pymt) - Advanced Payment for Construction</fullName>
            </value>
            <value>
                <fullName>DIP - Directory Listings</fullName>
            </value>
            <value>
                <fullName>GEN- General Billing (With Project Number)</fullName>
            </value>
            <value>
                <fullName>MAP - Map Request</fullName>
            </value>
            <value>
                <fullName>MSW - Misc Billing</fullName>
                <default>true</default>
                <label>MSW - Misc Billing</label>
            </value>
            <value>
                <fullName>POL - Pole Billing</fullName>
            </value>
            <value>
                <fullName>RWO - Joint Pole and Make Ready (With Project Number)</fullName>
            </value>
            <value>
                <fullName>VID - Video Advertising</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>