UCF-APR2.4/ftr main/force-app/main/default/objects/Case/fields/Broadband_Order_Issued__c.field-meta.xml
<CustomField>
    <fullName>Broadband_Order_Issued__c</fullName>
    <description>Added for Jaryl&apos;s UCaaS and CPE tracking - Network COE case.  Created 4/11/2020</description>
    <inlineHelpText>Select the choice that reflects the Broadband order issuance.</inlineHelpText>
    <label>Broadband Order Issued</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>