UCF-APR2.4/ftr main/force-app/main/default/objects/Case/fields/BTN__c.field-meta.xml
<CustomField>
    <fullName>BTN__c</fullName>
    <label>BTN</label>
    <length>10</length>
    <type>Text</type>
</CustomField>