UCF-APR2.4/ftr main/force-app/main/default/objects/Case/fields/Business_Credit_Information__c.field-meta.xml
<CustomField>
    <fullName>Business_Credit_Information__c</fullName>
    <inlineHelpText>Either Tax ID or SSN</inlineHelpText>
    <label>Business Credit Information (Tax ID/SSN)</label>
    <length>9</length>
    <type>Text</type>
</CustomField>