UCF-APR2.4/ftr main/force-app/main/default/objects/Case/fields/Business_Priority__c.field-meta.xml
<CustomField>
    <fullName>Business_Priority__c</fullName>
    <inlineHelpText>Only necessary if you have multiple Admin requests that you want to prioritize within the Priority selection. If you want to change the Business Priority on the case, chatter @admin with your request.</inlineHelpText>
    <label>Business Priority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>7</fullName>
            </value>
            <value>
                <fullName>8</fullName>
            </value>
            <value>
                <fullName>9</fullName>
            </value>
            <value>
                <fullName>Critical</fullName>
                <isActive>false</isActive>
                <label>Critical</label>
            </value>
            <value>
                <fullName>High</fullName>
                <isActive>false</isActive>
                <label>High</label>
            </value>
            <value>
                <fullName>Low</fullName>
                <isActive>false</isActive>
                <label>Low</label>
            </value>
            <value>
                <fullName>Medium</fullName>
                <isActive>false</isActive>
                <label>Medium</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>