UCF-APR2.4/ftr main/force-app/main/default/objects/Case/fields/Business_Type__c.field-meta.xml
<CustomField>
    <fullName>Business_Type__c</fullName>
    <description>Created for Account Management case to auto assign to different queues. 00905026 2/22</description>
    <label>Business Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Retail</fullName>
            </value>
            <value>
                <fullName>Carrier</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>