UCF-APR2.4/ftr main/force-app/main/default/objects/Case/fields/Cable_Request__c.field-meta.xml
<CustomField>
    <fullName>Cable_Request__c</fullName>
    <label>Cable Request</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>